Fix text overflow by removing body from LxRow. Move pre styles to SongView

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -19,12 +19,3 @@
 .lx-cover .lx-logo img {
   display: block;
 }
-
-.lx-form-grid>.lx-main {
-  overflow-x: auto;
-}
-
-.pre {
-  white-space: pre;
-  font-family: monospace;
-}
